--- a/careers.html
+++ b/careers.html
@@ -17,29 +17,13 @@
 	<link href='css/responsive.css' id='responsive-css' media='all' rel='stylesheet' type='text/css'>
 	<link href='css/custom.css' id='custom-css' media='all' rel='stylesheet' type='text/css'>
 	<!-- scripts -->
-	<script src='scripts/jquery.js' type='text/javascript'></script>
-	<script src='scripts/jquery.ui.core.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.ui.widget.min.js' type= 'text/javascript'></script>
-	<script src='scripts/jquery.ui.accordion.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.ui.tabs.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.ba-bbq.min.js'type='text/javascript'></script>
-	<script src='scripts/jquery.easing.1.3.js'type='text/javascript'></script>
-	<script src='scripts/jquery.carouFredSel-5.6.1-packed.js' type='text/javascript'></script>
-	<script src='scripts/jquery.timeago.js' type='text/javascript'></script>
-	<script src='scripts/jquery.hint.js' type='text/javascript'></script>
-	<script src='scripts/jquery.isotope.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.fancybox-1.3.4.pack.js' type='text/javascript'></script>
-	<script src='scripts/jquery.qtip.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.blockUI.js' type='text/javascript'></script>
-    <script src='scripts/doubletaptogo.js' type='text/javascript'></script>
+	<script src='scripts/main.min.js' type='text/javascript'></script>
 	<script src='http://maps.google.com/maps/api/js?sensor=false&amp;ver=3.5.1' type='text/javascript'></script>
 	<script type='text/javascript'>
 	/* <![CDATA[ */
 	    var config = [];
 	    config = {"ajaxurl":"ajax.php","slider_autoplay":"true","slide_interval":5000,"slider_effect":"scroll","slider_transition":"swing","slider_transition_speed":500};;
 	    /* ]]> */
-
-
 	    jQuery(document).ready(function(event)
 		{
 			var identifier = window.location.hash;
@@ -56,9 +40,6 @@
 		    })
 		});
 	</script>
-
-	<script type="text/javascript" src="scripts/contact_form.js"></script>
-	<script src='scripts/content.js' type='text/javascript'></script>
 </head>
 
 <body class="content page page-template">
