--- a/index.html
+++ b/index.html
@@ -9,29 +9,7 @@
 	<link href="/favicon.ico"rel="shortcut icon">
 	<!--style-->
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-	<link href='css/reset.css' id='reset-css' media='all' rel='stylesheet' type='text/css'>
-	<link href='css/superfish.css' id='superfish-css' media='all' rel='stylesheet' type='text/css'>
-	<link href='css/jquery.fancybox.css' id='jquery-fancybox-css' media='all' rel='stylesheet' type='text/css'>
-	<link href='css/jquery.qtip.css' id='jquery-qtip-css' media='all' rel='stylesheet' type='text/css'>
-	<link href='css/style.css' id='main-css' media='all' rel='stylesheet' type='text/css'>
-	<link href='css/responsive.css' id='responsive-css' media='all' rel='stylesheet' type='text/css'>
-	<link href='css/custom.css' id='custom-css' media='all' rel='stylesheet' type='text/css'>
-	<!-- scripts -->
-	<script src='scripts/jquery.js' type='text/javascript'></script>
-	<script src='scripts/jquery.ui.core.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.ui.widget.min.js' type= 'text/javascript'></script>
-	<script src='scripts/jquery.ui.accordion.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.ui.tabs.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.ba-bbq.min.js'type='text/javascript'></script>
-	<script src='scripts/jquery.easing.1.3.js'type='text/javascript'></script>
-	<script src='scripts/jquery.carouFredSel-5.6.1-packed.js' type='text/javascript'></script>
-	<script src='scripts/jquery.timeago.js' type='text/javascript'></script>
-	<script src='scripts/jquery.hint.js' type='text/javascript'></script>
-	<script src='scripts/jquery.isotope.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.fancybox-1.3.4.pack.js' type='text/javascript'></script>
-	<script src='scripts/jquery.qtip.min.js' type='text/javascript'></script>
-	<script src='scripts/jquery.blockUI.js' type='text/javascript'></script>
-	<script src='scripts/doubletaptogo.js' type='text/javascript'></script>
+	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
 	<script src='http://maps.google.com/maps/api/js?sensor=false&amp;ver=3.5.1' type='text/javascript'></script>
 	<script type='text/javascript'>
 	/* <![CDATA[ */
@@ -39,7 +17,7 @@
 		config = {"ajaxurl":"ajax.php","slider_autoplay":"true","slide_interval":6000,"slider_effect":"scroll","slider_transition":"swing","slider_transition_speed":500};;
 		/* ]]> */
 	</script>
-	<script src='scripts/main.js' type='text/javascript'></script>
+	<script src='scripts/main.min.js' type='text/javascript'></script>
 </head>
 
 <body class="home page page-template">
