--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 	<meta content="ACT Tree Felling is Canberra's first tree surgery service. We use ActewAGL Accredited Qualified Aborists" name="description">
-	<link href="/favicon.ico"rel="shortcut icon">
+	<link href="favicon.ico"rel="shortcut icon">
 	<!--style-->
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
-	<script src='http://maps.google.com/maps/api/js?sensor=false&amp;ver=3.5.1' type='text/javascript'></script>
+	<script src='https://maps.google.com/maps/api/js?sensor=false&amp;ver=3.5.1' async></script>
 	<script type='text/javascript'>
 	/* <![CDATA[ */
 		var config = [];
@@ -296,5 +296,14 @@
 			</div>
 		</div>
 	</div>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108378272-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-108378272-1');
+	</script>
 </body>
 </html>
