--- a/testimonials.html
+++ b/testimonials.html
@@ -12,7 +12,7 @@
 	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
 	<!-- scripts -->
 	<script src='scripts/main.min.js' type='text/javascript'></script>
-	<script src='http://maps.google.com/maps/api/js?sensor=false&amp;ver=3.5.1' type='text/javascript'></script>
+	<script src='https://maps.google.com/maps/api/js?sensor=false&amp;ver=3.5.1' async></script>
 	<script type='text/javascript'>
 	/* <![CDATA[ */
 	    var config = [];
@@ -217,5 +217,14 @@
 			</div>
 		</div>
 	</div>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108378272-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-108378272-1');
+	</script>
 </body>
 </html>
