--- a/contact.html
+++ b/contact.html
@@ -11,28 +11,21 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
 	<!-- scripts -->
-	<script src='scripts/main.min.js' type='text/javascript'></script>
-	<script src='https://maps.google.com/maps/api/js?sensor=false&amp;ver=3.5.1' async></script>
+	<script src='scripts/main.min.js' async type='text/javascript'></script>
 	<script type='text/javascript'>
 	/* <![CDATA[ */
 	    var config = [];
 	    config = {"ajaxurl":"ajax.php","slider_autoplay":"true","slide_interval":5000,"slider_effect":"scroll","slider_transition":"swing","slider_transition_speed":500};;
 	    /* ]]> */
-	    jQuery(document).ready(function(event)
-		{
-			var identifier = window.location.hash;
-			if (identifier === "#request") {
-			    jQuery('html, body').animate({
-			        scrollTop: jQuery("#requestQuoteDiv").offset().top
-			    }, 1000);
-			}
+	</script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108378272-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
-			jQuery("a.requestQuote").click(function () {
-			    jQuery('html, body').animate({
-			        scrollTop: jQuery("#requestQuoteDiv").offset().top
-			    }, 1000);
-		    })
-		});
+	gtag('config', 'UA-108378272-1');
 	</script>
 </head>
 
@@ -85,11 +78,6 @@
 						<li><a href="contact.html">Contact Us</a></li>
 					</ul>
 				</nav>
-				<script>
-					(function($) {
-						$( '#nav li:has(ul)' ).doubleTapToGo();
-					})(jQuery);
-				</script>
 			</div>
 		</div>
 		</div>
@@ -236,14 +224,5 @@
 			</div>
 		</div>
 	</div>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108378272-1"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'UA-108378272-1');
-	</script>
 </body>
 </html>
