--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
 	<!--style-->
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
-	<script src='https://maps.google.com/maps/api/js?sensor=false&amp;ver=3.5.1' async></script>
+	
 	<script type='text/javascript'>
 	/* <![CDATA[ */
 		var config = [];
 		config = {"ajaxurl":"ajax.php","slider_autoplay":"true","slide_interval":6000,"slider_effect":"scroll","slider_transition":"swing","slider_transition_speed":500};;
 		/* ]]> */
 	</script>
-	<script src='scripts/main.min.js' type='text/javascript'></script>
+	<script src='scripts/main.min.js' async type='text/javascript'></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108378272-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-108378272-1');
+	</script>
 </head>
 
 <body class="home page page-template">
@@ -69,11 +78,6 @@
 						<li><a href="contact.html">Contact Us</a></li>
 					</ul>
 				</nav>
-				<script>
-					(function($) {
-						$( '#nav li:has(ul)' ).doubleTapToGo();
-					})(jQuery);
-				</script>
 			</div>
 		</div>
 	</div>
@@ -296,14 +300,5 @@
 			</div>
 		</div>
 	</div>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108378272-1"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'UA-108378272-1');
-	</script>
 </body>
 </html>
