--- a/services.html
+++ b/services.html
@@ -11,14 +11,22 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
 	<!-- scripts -->
-	<script src='scripts/main.min.js' type='text/javascript'></script>
-	<script src='https://maps.google.com/maps/api/js?sensor=false&amp;ver=3.5.1' async></script>
+	<script src='scripts/main.min.js' async type='text/javascript'></script>
 	<script type='text/javascript'>
 	/* <![CDATA[ */
 	    var config = [];
 	    config = {"ajaxurl":"ajax.php","slider_autoplay":"true","slide_interval":5000,"slider_effect":"scroll","slider_transition":"swing","slider_transition_speed":500};;
 	    /* ]]> */
-	</script>
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108378272-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-108378272-1');
+    </script>
 </head>
 
 <body class="content page page-template">
@@ -70,11 +78,6 @@
 						<li><a href="contact.html">Contact Us</a></li>
 					</ul>
 				</nav>
-				<script>
-					(function($) {
-						$( '#nav li:has(ul)' ).doubleTapToGo();
-					})(jQuery);
-				</script>
 			</div>
 		</div>
 	</div>
@@ -397,14 +400,5 @@
             </div>
         </div>
     </div>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108378272-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-108378272-1');
-    </script>
 </body>
 </html>
