--- a/about.html
+++ b/about.html
@@ -94,8 +94,8 @@
 				<p>With over 38 years experience in the Tree Surgery Industry, ACT Tree Felling can provide all your tree removal, pruning and chipping requirements.</p>
 			</div>
 		</div>
-        <div class="content_box_container clearfix">
-        	<!-- Contact Us -->
+    <div class="content_box_container clearfix">
+      <!-- Contact Us -->
 			<div class="padding last">
 				<div class="content clearfix contactus">
 					<div class="description full">
@@ -103,12 +103,11 @@
 					</div>
 
 					<div class="description half first">
-						<p class="intro">A.C.T Tree Felling is Canberra’s longest running tree services business, established by Paddy Hanson in 1975.</p>
-						<p style="padding-top:0px" class="intro">What began as a small family-run business, between Paddy and his son Tim van der Linden, has now progressed into one of the leading Arboriculture service providers in Canberra.</p> 
-						<p>We are professional Arborists who have a passion for trees and a genuine interest in maintaining their health and safety for the enhancement of our neighbourhoods and communities. Our service provides total tree health care, ranging from specialist pruning, dead-wooding, removal, stump grinding, cable and bracing, and power line clearing.</p> 
-						<p>We have provided our specialist services for many established clients over the years, including; The Prime Minister’s Lodge, The Australian National Botanic Gardens, Territory and Municipal Services, Civium Strata People, Independent Strata Management, and A.C.T Strata Management. We are also the preferred tree services supplier for the majority of Canberra’s real estate agencies, including Peter Blackshaw Real Estate, Luton Properties, Elders Real Estate, and Ray White.</p>
-						<p>As an individual home owner you may only ever use a qualified tree surgeon once or twice; or you may require one on a more regular basis, for example if you are maintaining trees near power lines, or if you own a specimen tree requiring regular pruning. Whatever your situation, it is extremely important to choose a professional tree surgeon who won’t over-charge you, or worse yet, provide poor quality work to your trees which can’t be reversed. At A.C.T Tree Felling we provide professional tree advice, high quality work, fair pricing, reliability and friendliness that comes with being a progressive tree services provider. </p>
-						<p>So you can rest assured that we are the right choice for all your tree service needs. </p>
+						<p class="intro">A.C.T Tree Felling is Canberra’s longest running tree services business, established by Paddy Hanson in 1975. What began as a small family-run business, between Paddy and his son Tim van der Linden, has now advanced into a leading Arboriculture service provider in Canberra.</p>
+						<p style="padding-top:0px" class="intro">Our team are professional Arborists who have a passion for trees and a genuine interest in maintaining their health and condition for the enhancement of our neighbourhoods and communities. Our holistic services provide total tree health care, ranging from specialist pruning, dead-wooding, removal, stump grinding, cable and bracing, and power line clearing. </p> 
+						<p>We have Diploma qualified Arborists available to undertake your consulting and reporting needs, if you have safety concerns, trees on development sites, tree legislation or pest and disease problems. We have provided our specialist services for many established clients over the years, including; The Prime Minister’s Lodge, The Australian National Botanic Gardens, Territory and Municipal Services, Civium Strata People, Independent Strata Management, and A.C.T Strata Management. We are also the preferred tree services supplier for the majority of Canberra’s real estate agencies, including Peter Blackshaw Real Estate, Luton Properties, Elders Real Estate, and Ray White.</p>
+						<p>As an individual homeowner you may only ever use a qualified Arborist once or twice; or you may require one on a more regular basis, for example if you are maintaining trees near power lines, or if you own a specimen tree requiring regular pruning. Whatever your situation, it is extremely important to choose a professional Arborist . Poor quality arboricultural work cannot be reversed, it can lead to poor growth patterns, poor structural stability and pest and disease issues. If you are having a tree removed this is high risk work and unqualified or uninsured tree fellers can lead to large issues. At A.C.T Tree Felling we provide professional tree consultations, high quality work, fair pricing, reliability and friendliness that comes with being a progressive tree services provider.</p>
+						<p>As a result, you can rest assured that we are the right choice for all your tree service needs.</p>
 					</div>
 
 					<div class="description half">
