--- a/careers.html
+++ b/careers.html
@@ -117,7 +117,8 @@
 						<h3>Employment Opportunities</h3>
 					</div>
 					<div class="description full">
-						<p>If you would like to apply please email us at <a href="mailto:service@acttree.com.au?Subject=Employment%20Apply">service@acttree.com.au</a> and attach your resume and/or cover letter. <br><br>An ACT Tree Felling representative will contact you to discuss current employment opportunities.</p>
+						<p>If you would like to apply please email us at <a href="mailto:service@acttree.com.au?Subject=Employment%20Apply">service@acttree.com.au</a> and attach your resume and/or cover letter.</p>
+						<p>An ACT Tree Felling representative will contact you to discuss current employment opportunities.</p>
 					</div>
 				</div>
 			</div>
