--- a/services.html
+++ b/services.html
@@ -103,8 +103,8 @@
 					</div>
 					<div class="description">
 						<h3>Tree felling</h3>
-						<p>We always prefer to retain trees where possible, however when removal is necessary you can be assured that your trees will be brought down safely and efficiently, with the area left spotlessly clean after the job is complete.  Our arborists can also advise you on the life expectancy of your trees, so you can plan ahead, if need be.</p>
-						<p>Your tree may need removing if it is:</p>
+						<p>We always prefer to retain trees where possible, however when removal is required you can be assured that we can remove your trees safely and efficiently, with the area left spotlessly clean after the job is complete. Our arborists can also advise you on the expected ongoing viability of your trees, and relevant regulations or laws that apply to your tree, so you can plan ahead, and ensure that all the boxes are ticked.</p>
+						<p>You may wish to consider removing your tree if it is:</p>
 						<ul>
 							<li>Dead or diseased;</li>
 							<li>Storm damaged;</li>
@@ -125,22 +125,23 @@
 					</div>
 					<div class="description">
 						<h3>Pruning & shaping</h3>
-						<p>ACT Tree Felling are experts when it comes to pruning trees and it is a service we really pride ourselves on.  There are many benefits to pruning a tree correctly and we always prune to the highest standard, with an understanding of tree biology and the variance of species characteristics.</p>
-						<p>Correct pruning can reduce the wind resistance of your trees, lessening the chance of branch failure.</p>
-
-						<p>Your trees may require pruning if they have:</p>
+						<p>ACT Tree Felling specialise in pruning trees, it is a service we take pride in being able to provide at the highest level. </p>
+						<p>There are many benefits to pruning a tree correctly and we always prune to the highest industry standards, complying with Australian Standard for pruning of amenity trees (AS4373), ACT Tree Protection Act 2005 and any other relevant standards.</p>
+                        <P>With an understanding of tree biology and the variance of species characteristics. Correct pruning can reduce the wind resistance of your trees, lessening the chance of branch failure.</P>
+						<p>Your trees may benefit from pruning if they have:</p>
 						<ul>
 						    <li>Excessive end weight (the amount of foliage concentrated towards the end of branches);</li>
 						    <li>Structural defects such as inclusions, cavities, rot or diseases;</li>
 						    <li>Lower branches that require clearing to allow for pedestrian or mower access.</li>
 						</ul>
 
-						<p>Or pruning may be beneficial in order to:</p>
+						<p>Pruning can also:</p>
 						<ul>
 						    <li>Allow more light to penetrate to your garden or grass;</li>
-						    <li>Remove large limbs hanging over your house;</li>
 						    <li>Remove dead wood or diseased branches;</li>
-						    <li>Clear from power lines, other structures or buildings.</li>
+						    <li>Clear branches and foliage from power lines, other structures or buildings.</li>
+                            <li>Shape a specimen tree in your yard.</li>
+                            <li>Remove or reduce unwanted growth.</li>
 						</ul>
 					</div>
 					<div class="image">
@@ -156,14 +157,7 @@
                     </div>
                     <div class="description">
                         <h3>Dead-wooding</h3>
-                        <p>Dead wooding is the process of selectively removing the dead, dying and diseased branches from trees.  If dead wood is removed on a regular basis, a tree remains in good condition, puts on more growth and generally has a longer and healthier life.</p>
-                        <p>This service provides numerous benefits including:</p>
-                        <ul>
-                            <li>Increasing the safety of the area surrounding the tree;</li>
-                            <li>Promoting positive health of the tree by stimulating new growth;</li>
-                            <li>Reducing the amount of leaf material, as a surplus of material can encourage insect infestation and/or the spread of disease;</li>
-                            <li>Maintaining the aesthetic appeal of the tree.</li>
-                        </ul>
+                        <p>Dead wooding is the process of selectively removing the dead, dying and diseased branches from trees. Removing the deadwood from your tree can increase the aesthetic appeal of your tree and reduce the likelihood of dead branches falling.</p>
                     </div>
                     <div class="image">
                         <img src="images/content/image3.jpg" alt="">
@@ -178,10 +172,10 @@
                     </div>
                     <div class="description">
                         <h3>Removal of difficult or dangerous trees</h3>
-                        <p>With almost 40 years experience working in the tree industry in Canberra, ACT Tree Felling have developed a reputation as the best local business for removal of difficult, large and/or dangerous trees.</p>
-                        <p>We can honestly say that there is not a tree in Canberra that we would not be able to remove.</p>
-                        <p>We will organise the safest way to complete these difficult jobs, often involving traffic management and the use of cranes.  We strive to provide a safe working environment for our customers and ourselves.</p>
-                        <p>We are fully equipped with the most advanced tree care equipment to ensure the job is done right and in a safe and timely manner.</p>
+                        <p>With almost 40 years’ experience working in the tree industry in Canberra, ACT Tree Felling has developed a reputation as the best local business for removal of difficult, large and/or dangerous trees. We are the preferred providers for the Australian National Botanic Gardens, where we are often contracted to remove difficult to access, large trees in sensitive environments where no damage to other plants is acceptable.</p>
+                        <p>We will organise all aspects of the project to ensure these difficult jobs are completed in the safest method possible, sometimes involving traffic management and the use of cranes.</p>
+                        <p>We have strict Work Health and Safety Policies internally and comply with all relevant legislation to ensure a safe work site for all our staff, clients and members of the public.</p>
+                        <p>We are fully equipped with the most advanced tree care equipment to ensure the job is completed professionally, safely and efficiently.</p>
                     </div>
                     <div class="image">
                         <img src="images/content/image4.jpg" alt="">
@@ -195,13 +189,13 @@
                         <span class="five">&nbsp;</span>
                     </div>
                     <div class="description">
-                        <h3>Power line clearing (ActewAGL Accredited)</h3>
-                        <p>All home owners in the ACT are required by law to ensure their trees are clear from power and service lines.  Sometimes trees growing too close to power lines can cause blackouts, create safety hazards such as grass fires and bushfires, and increase the risk of electrocution.</p>
-                        <p>Our staff are trained to work around live power lines, so most of the time you won’t need to have the power turned off to clear your trees from the lines.  In cases where a power outage is required, we will arrange the whole process for you in cooperation with ActewAGL.</p>
+                        <h3>Power line clearing (EvoEnergy Accredited)</h3>
+                        <p>All home owners in the ACT are required by law to ensure their trees are clear from power and house service lines. Sometimes trees growing too close to power lines can cause blackouts, create safety hazards such as fires, and increase the risk of electrocution.</p>
+                        <p>Our staff are trained and accredited to the highest level to work around live power lines, so most of the time we will not require a power outage to achieve required clearance from the powerlines. In cases where a power outage is required, we will arrange the whole process for you in cooperation with EvoEnergy.</p>
                         <p>You can rest assured that we are:</p>
                         <ul>
-                            <li>ActewAGL qualified to the highest level, to work with trees around power lines;</li>
-                            <li>Fully trained by TAFE NSW in Vegetation Management;</li>
+                            <li>EvoEnergy accrediated to the highest level, to work with trees near power lines;</li>
+                            <li>Fully trained and qualified in Vegetation Management;</li>
                             <li>All employees are trained and re-assessed yearly to maintain these qualifications and keep up-to-date with changes and new methods of work.</li>
                         </ul>
                     </div>
@@ -218,14 +212,14 @@
                     </div>
                     <div class="description">
                         <h3>Cable and bracing</h3>
-                        <p>Trees are very beneficial to our environment and add enormous value to our homes and places of work.  They may also have sentimental value for some customers, who may wish to retain their trees at all costs.</p>
-                        <p>However sometimes trees with multiple trunks, or what we call ‘co-dominant stems’, can become structurally defective and ‘failure’ at this type of branch union is quite common.</p>
-                        <p>ACT Tree Felling can inspect your trees, assess them for any structural weakness and then recommend the best type of cable or bracing system for your situation.  The result?  You can retain the trees you love and sleep well at night knowing that they, you and your property are safe.</p>
+                        <p>Trees are very beneficial to our environment and can add significant monetary and amenity value to our homes, places of work and communities. They may also have sentimental value for some customers, who may wish to retain their trees at all costs.</p>
+                        <p>However sometimes trees with multiple trunks (co-dominant stems), can have less structural integrity than optimal and ‘failure’ at this type of branch union can occur.</p>
+                        <p>Other defected unions or tree parts can have a higher than average likelihood of failure. ACT Tree Felling can inspect your trees, assess them for any structural weakness and then recommend if bracing may assist in the retention of your tree assets and what the most appropriate type of cable or bracing system for your situation. The result? You can retain the trees you love and have peace of mind knowing that you have done all you can to minimise any associated risk.</p>
                         <p>There are three major reasons for cable and bracing:</p>
                         <ul>
                             <li>Prevention - to reduce the chance of failure on a healthy tree with structural weakness;</li>
                             <li>Restoration - to prolong the existence of a damaged tree;</li>
-                            <li>Mitigation - to reduce the hazard potential of a tree.</li>
+                            <li>Mitigation - to reduce the risk associated with a tree.</li>
                         </ul>
                     </div>
                     <div class="image">
@@ -244,12 +238,12 @@
                         <p>Tree stumps can be unsightly, obtrusive and hazardous. Stump grinding is the most efficient and cost-effective solution to removing unwanted stumps from your property, to prevent re-growth and the spread of tree disease.</p>
                         <p>Stumps can become:</p>
                         <ul>
-                            <li>Nesting sites for termites;</li>
                             <li>Trip hazards;</li>
+                            <li>Nesting sites for termites;</li>
                             <li>Unsightly in grassed areas; and</li>
-                            <li>Full-grown trees again in future.</li>
+                            <li>Reshoot into full sized trees with significantly reduced structural integrity.</li>
                         </ul>
-                        <p>We also offer a wood chipping service where we can put all your branches/cuttings through our chipper, then either take away the mulched material or leave on-site for you to apply to your garden</p>
+                        <p>We also offer a wood chipping service where we can put all your branches/cuttings through our chipper, then either take away the mulched material or leave on-site for you to apply to your garden.</p>
                     </div>
                     <div class="image">
                         <img src="images/content/image7.jpg" alt="">
@@ -264,7 +258,7 @@
                     </div>
                     <div class="description">
                         <h3>Mulch Orders</h3>
-                        <p>Applying mulch to your trees and garden looks great, retains soil moisture, slows down the weeds and can add nutrition to your plants and trees.  Mulch is also great for trees in decline, as it aids recovery from stress, injury or disease.</p>
+                        <p>Applying mulch to your trees and garden looks great, retains soil moisture, slows down the weeds and can add nutrition to your plants and trees. Mulch is also great for trees in decline, as it aids recovery from stress, injury or disease.</p>
                         <p>ACT Tree Felling can supply quality mulch at a fantastically cheap rate, to locations throughout Canberra and Queanbeyan so please give us a call and we can get you onto our popular waiting list.</p>
                     </div>
                     <div class="image">
@@ -280,12 +274,19 @@
                     </div>
                     <div class="description">
                         <h3>Tree reports and consultation</h3>
-                        <p>If you are worried about your tree’s structural health, life expectancy, falling or overhanging limbs or something else that just doesn’t look quite right, a detailed tree inspection by one of our arborists will help ease your mind.  Our consultation will identify key issues or concerns in relation to your tree, giving you verbal advice in an easy-to-understand manner.  We will outline the What, Why and How of the overall state of your tree.  Our advice will also give an overall recommendation on tree retention, removal and tree replacement options.</p>
-                        <p>Need something in writing?  We can provide a documented tree report that clearly identifies problems that may exist in your trees and give details for any work that is recommended be done.</p>
-                        <p>We offer two types of tree reports:</p>
+                        <p>If you are worried about your tree’s structural integrity, health, condition, life expectancy, falling or overhanging limbs or something else that just doesn’t look quite right, a detailed tree inspection via consultation with one of our Consulting Arborists will help ease your mind.</p>
+                        <p>Our consultation will identify key issues or concerns in relation to your tree, giving you verbal advice in an easy-to-understand manner.</p>
+                        <p>Need something in writing? </p>
+                        <p>We can provide either brief field notes to outline the basic details of your tree/s and situation or alternatively a full tree report formatted and referenced to be utilised for engagement with third parties (such as ACAT, Tree Protection Unit, ACTPLA or Body Corporate Committees).</p>
+                        <p>The consultant will be a member of Arboriculture Australia and bound by the Code of Ethics of the Association.</p>
+                        <p>These qualifications ensure that our team of consultants will be able provide clear and concise advice in the following areas:</p>
                         <ul>
-                        	<li>INDIVIDUAL TREE HEALTH REPORTS – Mainly requested by private home owners, real estate agents or Government departments, to manage the health of an individual tree; these reports are also often used to assist in obtaining Government/Council approval to remove trees.</li>
-                        	<li>ASSET MANAGEMENT, TREE HEALTH AND RISK ASSESMENT REPORTS – Typically requested by Body Corporate managers, Government Organisations, School Committees and other facilities who manage public recreation or amenity spaces.</li>
+                        	<li>Tree health and condition, including methods and practices to improve these.</li>
+                            <li>Pest and Disease identification and methods of control.</li>
+                            <li>Tree law/legislation and development law and regulation within the local ACT area.</li>
+                            <li>Risk of Harms from trees in general in Australia and specific Risk Assessment using QTRA (Quantified Tree Risk Assessment) and/or TRAQ (Tree Risk Assessment Qualification).</li>
+                            <li>Pruning, pruning plans, advice on planting, removals or ongoing management of sites (considering Australian Standards for pruning and Industry best practice techniques).</li>
+                            <li>Tree Management Plans as required by ACT Tree Protection Act 2005 for developing/building on sites with regulated trees.</li>
                         </ul>
                         <p>If you are planning tree removal or tree pruning that requires council approval, we can prepare and submit the application on your behalf, and if necessary, provide supporting documentation and a tree report to go along with the application.</p>
                     </div>
