--- a/testimonials.html
+++ b/testimonials.html
@@ -104,7 +104,7 @@
 
 					<div class="description full first">
 						
-						<p>I have used the services of ACT Tree Felling for at least fifteen years for a very good reason. I have been designing gardens in Canberra for over thirty years. These designs have included such heritage sites as the National Film and Sound Archive to historic gardens at Duntroon down to the standard residential garden. Many needed not just tree removal but specialised tree surgery. I found Tim van der Linden, the proprietor of the company and his father before him expert in their advice. My clients time and again thanked me for recommending this organisation not only for the actual work but the great clean up after each project was finished. The standard comment from my clients was "one would never have known they have been here". <br>Congratulations and continue the excellent work. I have no hesitation in recommending ACT Tree Felling.</p>
+						<p>I have used the services of ACT Tree Felling for at least fifteen years for a very good reason. I have been designing gardens in Canberra for over thirty years. These designs have included such heritage sites as the National Film and Sound Archive to historic gardens at Duntroon down to the standard residential garden. Many needed not just tree removal but specialised tree surgery. I found Tim van der Linden, the proprietor of the company and his father expert in their advice. My clients time and time again thanked me for recommending this organisation not only for the actual work but the great clean up after each project was finished. The standard comment from my clients was "one would never have known they have been here". <br><br>Congratulations and continue the excellent work. I have no hesitation in recommending ACT Tree Felling.</p>
 						<p class="intro">Cedric Bryant<br><br>Garden Designer and Horticultural Consultant<br>Garden Writer for the Canberra CityNews.</p>
 
 						<hr> 
@@ -114,17 +114,17 @@
 
 						<hr> 
 
-						<p>"We were most impressed with the work done by your team. The tree climbing is an art that they have mastered and the work was done very efficiently and with limited disturbance. The thorough professionalism exhibited by your company from quoting through to completing the job was very creditable. We recommend your services".</p>
+						<p>"We were most impressed with the work done by your team. The tree climbing is an art that they have mastered, the work was done very efficiently and with limited disturbance. The thorough professionalism exhibited by your company from quoting through to completing the job was very creditable. We recommend your services".</p>
 						<p class="intro">Lionel and Juliana Wood – Homeowners, RIVETT A.C.T</p>
 
 						<hr> 
 
-						<p>"I have just had the guys do some work on the trees around our home. I wanted to convey how happy I was with the job the guys did. They did such a fantastic job with not only the trees but also the cleanup! They left our garden and trees looking far tidier than they were before they came. I really cannot express how pleased I am with the work done; I will highly recommend your service to anyone requiring this type of work."</p>
+						<p>"I have just had the guys do some work on the trees around our home. I wanted to convey how happy I was with the job the guys did. They did such a fantastic job with not only the trees but also the clean-up! They left our garden and trees looking far tidier than they were before they came. I really cannot express how pleased I am with the work done; I will highly recommend your service to anyone requiring this type of work."</p>
 						<p class="intro">Kate Richards – Homeowner KAMBAH A.C.T</p>
 
 						<hr> 
 
-						<p>Dear Paddy, Tim and all at ACT Tree Felling, <br>I just wanted to say a big thank you. As usual your help and advice on this recent massive job have been invaluable. It is never nice to have to deal with massive trees that come crashing down on top of properties. <br>You make it a lot easier! <br>Thanks for getting there so quickly. You always respond fast and give great advice. When we give you the go ahead with a job we know that it will be completed in your stated time frame. Plus you always leave the area tidy afterwards. <br>Much appreciated! <br>Regards,</p>
+						<p>Dear Paddy, Tim and all at ACT Tree Felling, <br>I just wanted to say a big thank you. As usual your help and advice on this recent massive job have been invaluable. It is never nice to have to deal with massive trees that come crashing down on top of properties. <br>You make it a lot easier! <br>Thanks for getting there so quickly. You always respond fast and give great advice. When we give you the go ahead with a job we know that it will be completed in your stated time frame. Plus, you always leave the area tidy afterwards. <br>Much appreciated! <br>Regards,</p>
 						<p class="intro">Lindsey Burne - Executive Property Manager LJ Hooker Dickson</p>
 
 						<hr> 
