Fixes to carousel, tweaks to load quicker, adding additional GA tracking code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	gtag('js', new Date());
 
 	gtag('config', 'UA-108378272-1');
+	gtag('config', 'AW-974770116');
 	</script>
 </head>
 
@@ -101,9 +102,9 @@
 				<p><br />
 					<a class="more black icon_small_arrow margin_right_white title" href="services.html" title="SEE OUR SERVICES">SEE OUR SERVICES</a>
 				</p>
-			</div>			
+			</div>
 			<div class="slider_content" id="slide_1_content">
-				<div class="slider_bg"></div> 
+				<div class="slider_bg"></div>
 				<h1 class="title">Get in touch</h1>
 				<p><h3 class="subtitle">Request a quote today</h3></p>
 				<p><a class="more black icon_small_arrow margin_right_white title" href="contact.html#request" title="REQUEST A QUOTE">REQUEST A QUOTE</a></p>
