--- a/services.html
+++ b/services.html
@@ -26,6 +26,7 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-108378272-1');
+    gtag('config', 'AW-974770116');
     </script>
 </head>
 
