--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta content="ACT Tree Felling is Canberra's first tree surgery service. We use ActewAGL Accredited Qualified Aborists" name="description">
 	<link href="favicon.ico"rel="shortcut icon">
 	<!--style-->
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
 	
 	<script type='text/javascript'>
@@ -215,7 +215,7 @@
 						<div class="FB_banner">
 							<h2 style="color:#FFF;"><img src="images/facebook_banner.jpg" width="49" height="39">Facebook news</h2>
 						</div>
-						<iframe src="http://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Facttreefelling&width=460&height=500&colorscheme=light&show_faces=false&header=false&stream=true&show_border=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:460px; height:500px;" allowTransparency="true"></iframe>
+						<iframe src="https://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Facttreefelling&width=460&height=500&colorscheme=light&show_faces=false&header=false&stream=true&show_border=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:460px; height:500px;" allowTransparency="true"></iframe>
 					</div>
 				</div>
 			</div>
