--- a/faq.html
+++ b/faq.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 	<meta content="" name="description">
-	<link href="http://act.com/images/favicon.ico"rel="shortcut icon">
+	<link href="/favicon.ico"rel="shortcut icon">
 	<!--style-->
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
 	<!-- scripts -->
 	<script src='scripts/main.min.js' async type='text/javascript'></script>
