--- a/testimonials.html
+++ b/testimonials.html
@@ -8,7 +8,7 @@
 	<meta content="ACT Tree Felling is Canberra's first tree surgery service. We use ActewAGL Accredited Qualified Aborists" name="description">
 	<link href="/favicon.ico"rel="shortcut icon">
 	<!--style-->
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
 	<!-- scripts -->
 	<script src='scripts/main.min.js' async type='text/javascript'></script>
