--- a/sitemap.html
+++ b/sitemap.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>Careers | ACT Tree Felling | Tree Surgery Service | Arborist Canberra</title>
+	<title>Sitemap | ACT Tree Felling | Tree Surgery Service | Arborist Canberra</title>
 	<!--meta-->
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 	<meta content="" name="description">
-	<link href="/favicon.ico" rel="shortcut icon">
+	<link href="/favicon.ico"rel="shortcut icon">
 	<!--style-->
 	<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='css/output.min.css' media='all' rel='stylesheet' type='text/css'>
@@ -37,7 +37,7 @@
 				<a href="index.html" title="A.C.T Tree Felling"></a>
 			</div>
 			<div class="top_hint">
-				<span style="color:#5da370">southside</span> 6281 2687&nbsp;&nbsp;&nbsp;<span style="color:#5da370">northside</span> 6162 2678&nbsp;&nbsp;&nbsp;<a class="more black icon_small_arrow margin_right_white title requestQuote" href="contact.html#request" title="Request a Quote">REQUEST A QUOTE</a>
+				<span style="color:#5da370">southside</span> 6281 2687&nbsp;&nbsp;&nbsp;<span style="color:#5da370">northside</span> 6162 2678&nbsp;&nbsp;&nbsp;<a class="more black icon_small_arrow margin_right_white title" href="contact.html#request" title="Request a Quote">REQUEST A QUOTE</a>
 			</div>
 			<div class="menu-main-menu-container">
 				<ul class="sf-menu header_right" id="menu-main-menu">
@@ -53,8 +53,7 @@
 					<li class="menu-item faq">
 						<a href="faq.html">FAQ</a>
 					</li>
-					<li class="menu-item careers active">
-						<span class="menuactive"></span>
+					<li class="menu-item careers">
 						<a href="careers.html">CAREERS</a>
 					</li>
 					<li class="menu-item testimonials">
@@ -85,44 +84,51 @@
 	<div class="headerbg"></div>
 	<!-- /Header -->
 	<ul class="slider">
-		<li id="slide_0" style="background-image: url(images/img4.jpg);">&nbsp;</li>
+		<li id="slide_0" style="background-image: url(images/img3.jpg);">&nbsp;</li>
 	</ul>
 	<div class="theme_page relative">
 		<div class="slider_content_box clearfix">
 			<div class="slider_content" id="slide_0_content" style="display: block;">
 				<div class="slider_bg"></div>
-				<h1 class="title">Careers</h1>
-				<p>A.C.T Tree Felling is Canberra's longest running tree services business, established by Paddy Hanson in 1975.</p>
+				<h1 class="title">SITEMAP</h1>
 			</div>
 		</div>
         <div class="content_box_container clearfix">
-        	<!-- Contact Us -->
-			<div class="padding last">
+			<!-- About Us -->
+            <div class="padding last">
 				<div class="content clearfix contactus">
-					<div class="description full">
-						<h3 class="blue">Would you like to work for ACT Tree Felling?</h3>
-					</div>
-
-					<div class="description half first">
-						<p class="intro">Are you interested in working for a company that takes professional standards in arboriculture very seriously and greatly values and rewards those with a highly professional approach to the arboriculture industry?</p> 
-						<p>If you are skilled in any areas of arboriculture or tree services, are qualified, experienced and motivated to do well and work professionally, plus enjoy working on challenging projects with like minded professionals, then ACT Tree Felling would be interested in talking to you.</p>
-						<p>At ACT Tree Felling we don't just offer the right candidates a job – we offer you a career with huge opportunities for advancement in learning, skills, activities and of course, salary.</p>
-						<p>You may be from overseas looking for a move to Australia's sunny landscape and brighter economic future – either temporarily or wish to gain a permanent visa. We can sponsor skilled arboricultural working tourists or those seeking longer-term residency. You will need recognised arboricultural qualifications and to be experienced</p>
-					</div>
-
-					<div class="description half">
-						<a class="post_image" href="#" style="cursor:default"><img height="243" src="images/content/acttrees_image4.jpg" width="460"></a>
-					</div>
-
-					<div class="description full">
-						<h3>Employment Opportunities</h3>
-					</div>
-					<div class="description full">
-						<p>If you would like to apply please email us at <a href="mailto:service@acttree.com.au?Subject=Employment%20Apply">service@acttree.com.au</a> and attach your resume and/or cover letter.</p>
-						<p>An ACT Tree Felling representative will contact you to discuss current employment opportunities.</p>
+					<div class="description full first">
+						<ul>
+                            <li>
+                                <a href="/index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="/about.html">About</a>
+                            </li>
+                            <li>
+                                <a href="/careers.html">Careers</a>
+                            </li>
+                            <li>
+                                <a href="/contact.html">Contact</a>
+                            </li>
+                            <li>
+                                <a href="/faq.html">FAQ</a>
+                            </li>
+                            <li>
+                                <a href="/services.html">Services</a>
+                            </li>
+                            <li>
+                                <a href="/sitemap.html">Sitemap</a>
+                            </li>
+                            <li>
+                                <a href="/testimonials.html">Testimonials</a>
+                            </li>
+                        </ul>
 					</div>
 				</div>
 			</div>
+
+
         </div>
     </div>
 
