--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>About | ACT Tree Felling  | Canberra's first tree surgery service | Qualified Arborists</title>
+	<title>About | ACT Tree Felling | Tree Surgery Service | Arborist Canberra</title>
 	<!--meta-->
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
