--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>Services | ACT Tree Felling  | Canberra's first tree surgery service | Qualified Arborists</title>
+	<title>Services | ACT Tree Felling | Tree Surgery Service | Arborist Canberra</title>
 	<!--meta-->
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
@@ -392,10 +392,7 @@
             </div>
 
             <div class="copyright_area">
-                <div class="copyright_left">
-                    Copyright © - ACT Tree Felling
-                </div>
-
+				<div class="copyright_left">Copyright © - ACT Tree Felling &nbsp;&nbsp;&nbsp; <a href="/sitemap.html" title="Sitemap for ACTTREE.com.au">Sitemap</a></div>
                 <div class="copyright_right">
                     <a class="scroll_top icon_small_arrow top_white" href="#top" title="Scroll to top">Top</a>
                 </div>
